# lithium

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  packs.txt
dep/: clonedependencies.bat
dep/glad_opengl_3_3/include/glad/: glad.h
dep/glad_opengl_3_3/src/: glad.c
dep/glad_opengl_4_6/include/glad/: glad.h
dep/glad_opengl_4_6/src/: glad.c
examples/: examples.md
glsl/: lightning.glsl
inc/: glbuffer.h  glcamera.h  glcubemap.h  glelement.h  glframebuffer.h  gllight.h  glmenuoption.h  glmesh.h  globject.h  glperspectivecamera.h  glrenderbuffer.h  glshader.h  glsoundengine.h  gltext.h  gltimemeasure.h  ianimatedobject.h  iobject.h
include/: debugostream.h  glanimatedobject.h  glanimation.h  glanimator.h  glapplication.h  glattributepointer.h  glbone.h  glbuffer.h  glcamera.h  glcomposedobject.h  glelement.h  glfader.h  glframebuffer.h  glimagetexture.h  glinput.h  glinstancedobject.h  gllight.h  glmenu.h  glmenuitem.h  glmenuoption.h  glmesh.h  glmodel.h  glmodelloader.h  globject.h  glorthographiccamera.h  glparticlesystem.h  glperspectivecamera.h  glrenderbuffer.h  glshader.h  glshaderprogram.h  glsimplecamera.h  glsoundengine.h  gltaskscheduler.h  gltext.h  gltexture.h  gltinyobjloader.h  gltriangle.h  glturntask.h  gluniformbufferobject.h  glvertexarray.h  (+7 more)
include/lithium/app/: glapplication.h  glinput.h  glmenuitem.h
include/lithium/application/: glapplication.h  glgamestate.h  glinput.h  glmenu.h  glmenuitem.h  glmenuoption.h  glplot.h  glrenderable.h  glrendergroup.h  glrendering.h  glrenderpipeline.h  glscene.h  gluserpointer.h
include/lithium/collision/: glaabb.h  glabstractbb.h  glcollision.h  glcollisionsystem.h  glgeometry.h  glsphere.h  glspherebb.h
include/lithium/core/: glattributepointer.h  glbuffer.h  glcubemap.h  glcubemaphdr.h  glframebuffer.h  glimagetexture.h  glrenderable.h  glrenderbuffer.h  glshader.h  glshaderprogram.h  gltexture.h  gluniformbufferobject.h  glupdateable.h  glvertexarray.h  glvertexarraybuffer.h
include/lithium/deeplearning/: dlfunctions.h  dllayer.h  dlmath.h  dlmatrix.h  dlneuralnetwork.h  dlneuron.h  dlreal.h  dlvector.h
include/lithium/ecs/: ecs.h  ecscomponent.h  ecsconstants.h  ecsentity.h  ecsslice.h  ecssystem.h
include/lithium/ex/: glblurstage.h  gltextrenderer.h
include/lithium/obsolete/: glanimation.h  glanimator.h  glanimdata.h  glassimp_glm_helpers.h  glbone.h  glmodel.h  glmodelloader.h  iinput.h  iobject.h
include/lithium/render/: glanimatedobject.h  glanimation.h  glanimation2.h  glanimator.h  glanimdata.h  glassimp_glm_helpers.h  glbone.h  glcamera.h  glentity.h  glfont.h  glianimation.h  glianimation2.h  glinstancedobject.h  glirenderable.h  glirendergroup.h  gllight.h  glmaterial.h  glmesh.h  glmodel.h  glmodelloader.h  glnode.h  globject.h  glorthographiccamera.h  glparticle.h  glparticlesystem.h  glrenderable.h  glrendergroup.h  glrenderpipeline.h  glrenderstage.h  glsimplecamera.h  glskinanimation.h  glskinnedobject.h  gltext.h  gltfloader.h  gltinyobjloader.h  gltrs.h
include/lithium/shape/: glcube.h  glplane.h  glsphere_.h
include/lithium/ui/: glcanvas.h  glcolor.h  glframe.h  glframelayout.h  glframerenderer.h  gllayout.h  gllayoutsystem.h
include/lithium/util/: gldebugostream.h  glperiodictask.h  gltask.h  gltaskscheduler.h  gltimemeasure.h
include/lithium/utility/: glassetlibrary.h  gldebugostream.h  glfilesystem.h  glfilewatch.h  gljson.h  glperiodictask.h  gltask.h  gltaskscheduler.h  gltimemeasure.h  glturntask.h  utility.h
src/: debugostream.cpp  dlmatrix.cpp  dlvector.cpp  ecs.cpp  glaabb.cpp  glanimatedobject.cpp  glassetlibrary.cpp  glcamera.cpp  glcanvas.cpp  glcolor.cpp  glcomposedobject.cpp  glcube.cpp  glcubemap.cpp  glcubemaphdr.cpp  gldebugostream.cpp  glfilesystem.cpp  glfilewatch.cpp  glframe.cpp  glframebuffer.cpp  glframelayout.cpp  glframerenderer.cpp  glimagetexture.cpp  glinput.cpp  gljson.cpp  gllayoutsystem.cpp  gllight.cpp  glmenu.cpp  glmenuitem.cpp  glnode.cpp  globject.cpp  glorthographiccamera.cpp  glperiodictask.cpp  glperspectivecamera.cpp  glplane.cpp  glplot.cpp  glrenderable.cpp  glrenderbuffer.cpp  glrenderstage.cpp  glscene.cpp  glshaderprogram.cpp  (+13 more)
test/assetloading/: CMakeLists.txt  Makefile  testassetloading.cpp
test/deeplearning/: CMakeLists.txt  testdeeplearning.cpp  testdeeplearning_xor1.cpp
test/filewatch/: Makefile  testfilewatch.cpp
test/geometry/: CMakeLists.txt  testgeom.cpp
test/json/: CMakeLists.txt  test.json  testjson.cpp
test/shader/: CMakeLists.txt  test.frag  testshader.cpp
test/shader/input/: lightning.glsl  math.glsl  object.frag
test/ui/: CMakeLists.txt  testui.cpp
test/vector/: CMakeLists.txt  testvector.cpp
